# clock

./: .gitignore  Makefile  README.md  clock  clock_add.py  clock_report.py  setup.cfg  tests.py
clock_framework/: clock.py  colors.py  datetimeutils.py  filters.py  logger.py  options.py  report.py  task.py  taskcollection.py
clock_framework/test/: task_test.py  taskcollection_test.py
clock_monitoring/: clock_monitor.py
src/: run.py
src/clock_tracking/: __main__.py  clock.py  config.py  filters.py  logger.py  options.py  report.py
src/clock_tracking_tests/: test_filters.py  test_logger.py  test_options.py  test_task.py
tests/: test_filters.py  test_logger.py  test_options.py  test_task.py  test_taskcollection.py
