[metadata]
name = clock-tracking
version = 0.0.7
author = Computoms
author_email = thomas.computoms@gmail.com
description = Time tracking management from python / command line
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/computoms/clock
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 2.8

[options.packages.find]
where = src